Bug 362368 - KMail says "connection is unencrypted" even though i have SSL enabled.
Summary: KMail says "connection is unencrypted" even though i have SSL enabled.
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 5.1.3
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-27 18:31 UTC by Arjun AK
Modified: 2016-04-28 05:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments
Screenshot (4.06 KB, image/png)
2016-04-27 18:32 UTC, Arjun AK
Details
screenshot2 (16.04 KB, image/png)
2016-04-27 18:33 UTC, Arjun AK
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Arjun AK 2016-04-27 18:31:31 UTC
Even though i have properly setup my gmail account(port 993 with "SSL/TSL" enabled), i still get this message.

Reproducible: Always
Comment 1 Arjun AK 2016-04-27 18:32:39 UTC
Created attachment 98646 [details]
Screenshot
Comment 2 Arjun AK 2016-04-27 18:33:09 UTC
Created attachment 98647 [details]
screenshot2
Comment 3 Laurent Montel 2016-04-27 19:56:57 UTC
I confirm it .
I will fix it soon
Comment 4 Laurent Montel 2016-04-28 05:32:03 UTC
Git commit e3e9302200eb098f268b533b54191bd2af42aae0 by Montel Laurent.
Committed on 28/04/2016 at 05:31.
Pushed by mlaurent into branch 'Applications/16.04'.

Fix Bug 362368 - KMail says "connection is unencrypted" even though i have SSL enabled.

FIXED-IN: 5.2.1

M  +3    -1    kmail/kmkernel.cpp

http://commits.kde.org/kdepim/e3e9302200eb098f268b533b54191bd2af42aae0