Fix Bug 362368 - KMail says "connection is unencrypted" even though i have SSL enabled.

FIXED-IN: 5.2.1
BUG: 362368